--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-typical": "^0.1.3",
+    "react-typing-animation": "^1.6.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
